Issue #1794 AssignPremiumPlan fails when using external database
Issue #1810 Publish-NavContainerApp is not using Publish-NAVApp -Force which leads to user interaction in some situations
Issue #1790 Add caching option SandboxArtifacts to flush-ContainerHelperCache to only flush sandbox artifacts
Issue #1822 Copy-AlSourceFiles doesn't support entitlements

2.0.7
Support -bakFile and -replaceExternalDatabases together on New-BcContainer
Support for preProcessorSymbols in Compile-AppInBcContainer and Run-AlPipeline
Issue #1720 add suppressBuildSearchIndex to Import-ObjectsToNavContainer
Add function Get-PlainText
Run-AlCops sometimes shows the exception instead of the AppSource failures
Get-BcArtifactUrl returns an older publicpreview version instead of a newer insider build

2.0.6
Issue #1696 Compile-AppInBcContainer does not throw error on missing RDLC
Add AddInsFolder parameter to Convert-BcAppsToRuntimePackages
Issue #1712 Get-NavContainerAppRuntimePackage doesn't return a path when the license is about to expire
Issue #1710 UploadImportAndApply-ConfigPackageInBcContainer doesn't work with filename
Issue #1709 Add switch GenerateSymbolReference to Compile-ObjectsInNavContainer.ps1
Issue #1722 add containername to PowerShell and Command prompts
Issue #1706 App generation failed without info after fixing #1696
Issue Cannot download symbols for apps with special characters
Issue #1728 Get-BcContainerApp doesn't return the appFile
Support that bcartifactsCacheFolder, containerHelperFolder and dvdPath can be a docker volume instead of a bind mount (for performance)
Run-AlValidation doesn't fail getting the same app in apps and previousApps (if apps in the middle of the dependency chain hasn't changed)
Run-AlCops doesn't use previousApp if it is the same version as the app
Issue #1704 Run-AlValidation with "preprocessorSymbols"
Issue #1729 Second container on same external database causes previous containers to stop working